Tower-Terror: Demo [Update 2]

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   
 <div class="Space">
 <!-------------------------WORDS--------------------------- -->
-<div class = "Words">
+<div hidden class = "Words">
   <div class = "Tower">
-   <div class = "Towers">T</div>
-   <div class = "Towers">O</div>
-   <div class = "Towers">W</div>
-   <div class = "Towers">E</div>
-   <div class = "Towers">R</div>
+   <div class = "TowersT">T</div>
+   <div class = "TowersO">O</div>
+   <div class = "TowersW">W</div>
+   <div class = "TowersE">E</div>
+   <div class = "TowersR">R</div>
   </div>
 </div>
 
