Tower-Terror: Demo [Update 3]

--- a/index.html
+++ b/index.html
@@ -9,64 +9,46 @@
 </head>
 <body>
 
-  <h1><a href="menu.html">Tower-Terror (Demo)</a></h1>
+<h1><a href="menu.html">Tower-Terror (Demo)</a></h1>
 
-  <div class="Inputs">
-  <div class="Input">_</div>
-  <div class="Input">_</div>
-  <div class="Input">_</div>
-  <div class="Input">_</div>
-  <div class="Input">_</div>
-  </div>
-  
+
 <div class="Space">
-<!-------------------------WORDS--------------------------- -->
-<div hidden class = "Words">
-  <div class = "Tower">
-   <div class = "TowersT">T</div>
-   <div class = "TowersO">O</div>
-   <div class = "TowersW">W</div>
-   <div class = "TowersE">E</div>
-   <div class = "TowersR">R</div>
+
+<div id = "Letters-Rows">
+    <div id = "Row1">
+      <div class = "Letters"><button>A</button></div>
+      <div class = "Letters"><button>B</button></div>
+      <div class = "Letters"><button>C</button></div>
+      <div class = "Letters"><button>D</button></div>
+      <div class = "Letters"><button>E</button></div>
+      <div class = "Letters"><button>F</button></div>
+      <div class = "Letters"><button>G</button></div>
+      <div class = "Letters"><button>H</button></div>
+    </div>
+
+  <div id = "Row2">
+     <div class = "Letters"><button>I</button></div>
+     <div class = "Letters"><button>J</button></div>
+     <div class = "Letters"><button>K</button></div>
+     <div class = "Letters"><button>L</button></div>
+     <div class = "Letters"><button>M</button></div>
+     <div class = "Letters"><button>N</button></div>
+     <div class = "Letters"><button>O</button></div>
+     <div class = "Letters"><button>P</button></div>
   </div>
-</div>
 
-  <!-------------------------WORDS--------------------------- -->
-  <div class="Letters-Rows">
-    <div class="Row1">
-   <div class ="Letters"><button id="btn">A</button></div>
-    <div class ="Letters"><button id="btn">B</button></div>
-     <div class ="Letters"><button id="btn">C</button></div>
-      <div class ="Letters"><button id="btn">D</button></div>
-       <div class ="Letters"><button id="btn">E</button></div>
-       <div class ="Letters"><button id="btn">F</button></div>
-       <div class ="Letters"><button id="btn">G</button></div>
-       <div class ="Letters"><button id="btn">H</button></div>
-     </div>
-
-     <div class="Row2">
-    <div class ="Letters"><button id="btn">I</button></div>
-   <div class ="Letters"><button id="btn">J</button></div>
-  <div class ="Letters"><button id="btn">K</button></div>
- <div class ="Letters"><button id="btn">L</button></div>
-<div class ="Letters"><button id="btn">M</button></div>
- <div class ="Letters"><button id="btn">N</button></div>
-  <div class ="Letters"><button id="btn">O</button></div>
-    <div class ="Letters"><button id="btn">P</button></div>
-     </div>
-
-    <div class="Row3">
-     <div class ="Letters"><button id="btn">Q</button></div>
-      <div class ="Letters"><button id="btn">R</button></div>
-     <div class ="Letters"><button id="btn">S</button></div>
-    <div class ="Letters"><button id="btn">T</button></div>
-   <div class ="Letters"><button id="btn">U</button></div>
-  <div class ="Letters"><button id="btn">V</button></div>
- <div class ="Letters"><button id="btn">W</button></div>
-<div class ="Letters"><button id="btn">X</button></div>
-<div class ="Letters"><button id="btn">Y</button></div>
-<div class ="Letters"><button id="btn">Z</button></div>
-   </div>
+  <div id = "Row3">
+     <div class = "Letters"><button>Q</button></div>
+     <div class = "Letters"><button>R</button></div>
+     <div class = "Letters"><button>S</button></div>
+     <div class = "Letters"><button>T</button></div>
+     <div class = "Letters"><button>U</button></div>
+     <div class = "Letters"><button>V</button></div>
+     <div class = "Letters"><button>W</button></div>
+     <div class = "Letters"><button>X</button></div>
+     <div class = "Letters"><button>Y</button></div>
+     <div class = "Letters"><button>Z</button></div>
+  </div>
 </div>
 </body>
 </html>
@@ -80,4 +62,23 @@
   <div class="Input"><button id="btn-input">_</button></div>
   <div class="Input"><button id="btn-input">_</button></div>
   <div class="Input"><button id="btn-input">_</button></div>
-  </div> -->
+  </div>
+  <div class="Inputs">
+  <div class="Input">_</div>
+  <div class="Input">_</div>
+  <div class="Input">_</div>
+  <div class="Input">_</div>
+  <div class="Input">_</div>
+</div>
+  
+
+<div  id = "Words">
+  <div class = "Tower">
+   <div hidden class = "TowersT">T</div>
+   <div hidden class = "TowersO">O</div>
+   <div hidden class = "TowersW">W</div>
+   <div hidden class = "TowersE">E</div>
+   <div hidden class = "TowersR">R</div>
+  </div>
+</div>
+ -->
