Tower-Terror: Demo [Update 3.2]

--- a/index.html
+++ b/index.html
@@ -16,38 +16,38 @@
 
 <div id = "Letters-Rows">
     <div id = "Row1">
-      <div class = "Letters"><button>A</button></div>
-      <div class = "Letters"><button>B</button></div>
-      <div class = "Letters"><button>C</button></div>
-      <div class = "Letters"><button>D</button></div>
-      <div class = "Letters"><button>E</button></div>
-      <div class = "Letters"><button>F</button></div>
-      <div class = "Letters"><button>G</button></div>
-      <div class = "Letters"><button>H</button></div>
+      <div class = "Letters"><button id="A">A</button></div>
+      <div class = "Letters"><button id="B">B</button></div>
+      <div class = "Letters"><button id="C">C</button></div>
+      <div class = "Letters"><button id="D">D</button></div>
+      <div class = "Letters"><button id="E">E</button></div>
+      <div class = "Letters"><button id="F">F</button></div>
+      <div class = "Letters"><button id="G">G</button></div>
+      <div class = "Letters"><button id="H">H</button></div>
     </div>
 
   <div id = "Row2">
-     <div class = "Letters"><button>I</button></div>
-     <div class = "Letters"><button>J</button></div>
-     <div class = "Letters"><button>K</button></div>
-     <div class = "Letters"><button>L</button></div>
-     <div class = "Letters"><button>M</button></div>
-     <div class = "Letters"><button>N</button></div>
-     <div class = "Letters"><button>O</button></div>
-     <div class = "Letters"><button>P</button></div>
+     <div class = "Letters"><button id="I">I</button></div>
+     <div class = "Letters"><button id="J">J</button></div>
+     <div class = "Letters"><button id="K">K</button></div>
+     <div class = "Letters"><button id="L">L</button></div>
+     <div class = "Letters"><button id="M">M</button></div>
+     <div class = "Letters"><button id="N">N</button></div>
+     <div class = "Letters"><button id="O">O</button></div>
+     <div class = "Letters"><button id="P">P</button></div>
   </div>
 
   <div id = "Row3">
-     <div class = "Letters"><button>Q</button></div>
-     <div class = "Letters"><button>R</button></div>
-     <div class = "Letters"><button>S</button></div>
-     <div class = "Letters"><button>T</button></div>
-     <div class = "Letters"><button>U</button></div>
-     <div class = "Letters"><button>V</button></div>
-     <div class = "Letters"><button>W</button></div>
-     <div class = "Letters"><button>X</button></div>
-     <div class = "Letters"><button>Y</button></div>
-     <div class = "Letters"><button>Z</button></div>
+     <div class = "Letters"><button id="Q">Q</button></div>
+     <div class = "Letters"><button id="R">R</button></div>
+     <div class = "Letters"><button id="S">S</button></div>
+     <div class = "Letters"><button id="T">T</button></div>
+     <div class = "Letters"><button id="U">U</button></div>
+     <div class = "Letters"><button id="V">V</button></div>
+     <div class = "Letters"><button id="W">W</button></div>
+     <div class = "Letters"><button id="X">X</button></div>
+     <div class = "Letters"><button id="Y">Y</button></div>
+     <div class = "Letters"><button id="Z">Z</button></div>
   </div>
 </div>
 </body>
