Tower-Terror: Demo [Update 3.3]

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 
 <div class="Space">
-
-<div id = "Letters-Rows">
-    <div id = "Row1">
+<div id="Choice">Wrong Pick:</div>
+<div class = "Letters-Rows">
+    <div class = "Row1">
       <div class = "Letters"><button id="A">A</button></div>
       <div class = "Letters"><button id="B">B</button></div>
       <div class = "Letters"><button id="C">C</button></div>
@@ -26,7 +26,7 @@
       <div class = "Letters"><button id="H">H</button></div>
     </div>
 
-  <div id = "Row2">
+  <div class = "Row2">
      <div class = "Letters"><button id="I">I</button></div>
      <div class = "Letters"><button id="J">J</button></div>
      <div class = "Letters"><button id="K">K</button></div>
@@ -37,7 +37,7 @@
      <div class = "Letters"><button id="P">P</button></div>
   </div>
 
-  <div id = "Row3">
+  <div class = "Row3">
      <div class = "Letters"><button id="Q">Q</button></div>
      <div class = "Letters"><button id="R">R</button></div>
      <div class = "Letters"><button id="S">S</button></div>
