Tower-Terror: Demo [Update: 3.5]

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 
 <h1><a href="menu.html">Tower-Terror (Demo)</a></h1>
+<div class="Word">
 
+</div>
 
 <div class="Space">
 <div id="Choice">Wrong Pick:</div>
