Tower-Terror: Demo [Update 3.8]

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <h1><a href="menu.html">Tower-Terror (Demo)</a></h1>
 <div class="Word">
 </div>
-
+<h1 id="Win" hidden> You win! </h1>
+<h1 id="Lose" hidden> You lose...</h1>
 <div class="Space">
-<div id="Choice">Wrong Pick:</div>
 <div class = "Letters-Rows">
     <div class = "Row1">
       <div class = "Letters"><button id="A">A</button></div>
