--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
 <h1><a href="menu.html">Tower-Terror (Demo)</a></h1>
 <div class="Word">
 </div>
+
 <h1 id="Win" hidden> You win! </h1>
 <h1 id="Lose" hidden> You lose...</h1>
-<div class="Space">
+
+<div id="Reset-Parent">
+  <button hidde id="Reset" onClick="window.location.href=window.location.href">Reset</button>
+</div>
+
+<!-- <div class="Space"> -->
+
 <div class = "Letters-Rows">
     <div class = "Row1">
       <div class = "Letters"><button id="A">A</button></div>
