--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<h1><a href="menu.html">Tower-Terror (Demo)</a></h1>
+<h1>Tower-Terror (Demo)</h1>
 <div class="Word">
 </div>
 
@@ -17,7 +17,7 @@
 <h1 id="Lose" hidden> You lose...</h1>
 
 <div id="Reset-Parent">
-  <button hidde id="Reset" onClick="window.location.href=window.location.href">Reset</button>
+  <button hidden id="Reset" onClick="window.location.href=window.location.href">Reset</button>
 </div>
 
 <!-- <div class="Space"> -->
