--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <h1>Tower-Terror (Demo)</h1>
 <div class="Word">
 </div>
-
+<a href = "instructions.html"> 
+<button id="instructions">Instructions
+  </button>
+  </a>
 <h1 id="Win" hidden> You win! </h1>
 <h1 id="Lose" hidden> You lose...</h1>
 
