--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/app.js" defer></script>
-    <title>Tower-Terror</title>
+    <title>Word Guess</title>
 </head>
 <body>
 
-<h1>Tower-Terror (Demo)</h1>
+<h1>Guess The Word (Demo)</h1>
 <div class="Word">
 </div>
 <a href = "instructions.html"> 
